新增预约接入双课时池
